welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:14: error: Unmatched closing brace '}' ignored here
 }
 ^